@@ -444,7 +444,7 @@
 	<slot name="executionPeriod" layout="menu-select-postback" validator="pt.ist.fenixWebFramework.renderers.validators.RequiredValidator" >
 		<property name="providerClass"
 			value="org.fenixedu.academic.ui.renderers.providers.NotClosedExecutionPeriodsProvider" />
-		<property name="format" value="${semester}º Sem - ${executionYear.year}" />
+		<property name="format" value="${childOrder}º Sem - ${executionYear.year}" />
 		<property name="destination" value="postBack"/>
 	</slot>
 </schema>
@@ -453,7 +453,7 @@
 	<slot name="executionPeriod" layout="menu-select-postback" validator="pt.ist.fenixWebFramework.renderers.validators.RequiredValidator" >
 		<property name="providerClass"
 			value="org.fenixedu.academic.ui.renderers.providers.NotClosedExecutionPeriodsProvider" />
-		<property name="format" value="${semester}º Sem - ${executionYear.year}" />
+		<property name="format" value="${childOrder}º Sem - ${executionYear.year}" />
 	</slot>
 </schema>
 
@@ -471,7 +471,7 @@
 <schema name="curriculumLineLog.search" type="org.fenixedu.academic.dto.curriculumLineLog.SearchCurriculumLineLog" bundle="MANAGER_RESOURCES">
 	<slot name="executionPeriod" layout="menu-select" validator="pt.ist.fenixWebFramework.renderers.validators.RequiredValidator" key="label.manager.executionCourse.executionPeriod">
 		<property name="providerClass" value="org.fenixedu.academic.ui.renderers.providers.NotClosedExecutionPeriodsProvider" />
-		<property name="format" value="${semester}º Sem - ${executionYear.year}" />	
+		<property name="format" value="${childOrder}º Sem - ${executionYear.year}" />	
 	</slot>
 	<slot name="studentNumber" validator="pt.ist.fenixWebFramework.renderers.validators.RequiredValidator" key="property.student.number"/>	
 </schema>	
